simple html to relocate to clinic

--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-hello
+<!DOCTYPE html><html lang="fa" dir="rtl">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>مسیر یابی به درمانگاه پارسیان البرز</title>
+  <meta name="description" content="انتخاب نرم‌افزار نقشه برای مسیر‌یابی به درمانگاه شبانه‌روزی پارسیان البرز در شهر جدید هشتگرد" />
+  <style>
+    :root{--bg:#0f172a;--card:#111827;--text:#e5e7eb;--muted:#9ca3af;--accent:#22c55e;--btn:#1f2937;--btnHover:#374151}
+    *{box-sizing:border-box}
+    body{margin:0;font-family:ui-rounded, system-ui, -apple-system, Segoe UI, Roboto, "Noto Sans", "IRANSans", Arial, sans-serif;background:radial-gradient(1200px 800px at 80% -20%, #1f2937 0%, #0f172a 60%),var(--bg);color:var(--text);display:flex;min-height:100svh;align-items:center;justify-content:center;padding:24px}
+    .wrap{width:100%;max-width:640px;background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02));border:1px solid rgba(255,255,255,.08);backdrop-filter: blur(6px);border-radius:24px;box-shadow:0 10px 30px rgba(0,0,0,.3);overflow:hidden}
+    header{padding:24px 24px 12px;border-bottom:1px solid rgba(255,255,255,.06)}
+    .title{font-size:22px;margin:0 0 6px}
+    .subtitle{margin:0;color:var(--muted);font-size:14px}
+    .content{padding:20px}.address{background:rgba(255,255,255,.04);border:1px dashed rgba(255,255,255,.12);border-radius:16px;padding:14px 16px;margin-bottom:18px;font-size:14px;line-height:1.9}
+
+.grid{display:grid;grid-template-columns:1fr;gap:12px}
+@media (min-width:520px){.grid{grid-template-columns:1fr 1fr}}
+
+.btn{display:flex;align-items:center;gap:12px;justify-content:center;padding:14px 16px;border-radius:14px;background:var(--btn);border:1px solid rgba(255,255,255,.08);text-decoration:none;color:var(--text);font-weight:700;transition:.2s ease;box-shadow:0 4px 12px rgba(0,0,0,.25)}
+.btn:hover{background:var(--btnHover);transform:translateY(-1px)}
+.icon{width:22px;height:22px;display:inline-block}
+
+.note{margin-top:16px;color:var(--muted);font-size:12px}
+footer{padding:8px 16px 20px;text-align:center;font-size:12px;color:var(--muted)}
+.call{margin-top:12px;display:block;text-align:center;color:#a7f3d0;text-decoration:none;font-weight:700}
+
+  </style>
+</head>
+<body>
+  <main class="wrap">
+    <header>
+      <h1 class="title">مسیر به درمانگاه شبانه‌روزی پارسیان البرز</h1>
+      <p class="subtitle">شهر جدید هشتگرد – میدان یادبود</p>
+    </header>
+    <section class="content">
+      <div class="address">📍 آدرس: شهر جدید هشتگرد، میدان یادبود، درمانگاه شبانه‌روزی پارسیان البرز</div>
+      <div class="grid">
+        <!-- Google Maps -->
+        <a class="btn" href="https://maps.app.goo.gl/a4DcQW8ziQJA2erv9" target="_blank" rel="noopener">
+          <svg class="icon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 2C7.59 2 4 5.59 4 10c0 5.25 7.02 11.53 7.32 11.79.39.33.97.33 1.36 0C12.98 21.53 20 15.25 20 10c0-4.41-3.59-8-8-8Zm0 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z"/></svg>
+          باز کردن در Google Maps
+        </a>
+        <!-- Waze (جستجوی متنی؛ اپ نصب باشد باز می‌شود) -->
+        <a class="btn" href="https://waze.com/ul?q=%D8%AF%D8%B1%D9%85%D8%A7%D9%86%DA%AF%D8%A7%D9%87%20%D8%B4%D8%A8%D8%A7%D9%86%D9%87%E2%80%8C%D8%B1%D9%88%D8%B2%DB%8C%20%D9%BE%D8%A7%D8%B1%D8%B3%DB%8C%D8%A7%D9%86%20%D8%A7%D9%84%D8%A8%D8%B1%D8%B2%20%D9%85%DB%8C%D8%AF%D8%A7%D9%86%20%DB%8C%D8%A7%D8%AF%D8%A8%D9%88%D8%AF%20%D8%B4%D9%87%D8%B1%20%D8%AC%D8%AF%DB%8C%D8%AF%20%D9%87%D8%B4%D8%AA%DA%AF%D8%B1%D8%AF&navigate=yes" target="_blank" rel="noopener">
+          <svg class="icon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M20 8a8 8 0 1 0-16 0c0 2.98-1.8 5.2-2.9 6.29a1 1 0 0 0 .7 1.71H4a3 3 0 0 0 3 3 3 3 0 0 0 2.71-1.79A8 8 0 0 0 20 8Zm-4 10a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm-8 0a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm5-9h2a1 1 0 1 1 0 2h-2a1 1 0 1 1 0-2Zm-4 0h1a1 1 0 1 1 0 2H9a1 1 0 1 1 0-2Z"/></svg>
+          باز کردن در Waze
+        </a>
+        <!-- Neshan (لینک کوتاه ارسالی شما) -->
+        <a class="btn" href="https://nshn.ir/rbvlsxpxSkas" target="_blank" rel="noopener">
+          <svg class="icon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 2a7 7 0 0 0-7 7c0 5.25 7 13 7 13s7-7.75 7-13a7 7 0 0 0-7-7Zm0 9.5a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5Z"/></svg>
+          باز کردن در نشان
+        </a>
+        <!-- Balad (جستجوی متنی) -->
+        <a class="btn" href="https://balad.ir/search/%D8%AF%D8%B1%D9%85%D8%A7%D9%86%DA%AF%D8%A7%D9%87%20%D8%B4%D8%A8%D8%A7%D9%86%D9%87%E2%80%8C%D8%B1%D9%88%D8%B2%DB%8C%20%D9%BE%D8%A7%D8%B1%D8%B3%DB%8C%D8%A7%D9%86%20%D8%A7%D9%84%D8%A8%D8%B1%D8%B2%20%D9%85%DB%8C%D8%AF%D8%A7%D9%86%20%DB%8C%D8%A7%D8%AF%D8%A8%D9%88%D8%AF%20%D8%B4%D9%87%D8%B1%20%D8%AC%D8%AF%DB%8C%D8%AF%20%D9%87%D8%B4%D8%AA%DA%AF%D8%B1%D8%AF" target="_blank" rel="noopener">
+          <svg class="icon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 3a9 9 0 1 0 9 9A9 9 0 0 0 12 3Zm0 4a2 2 0 1 1-2 2 2 2 0 0 1 2-2Zm0 12a7 7 0 0 1-5.65-2.83c.09-1.87 3.77-2.9 5.65-2.9s5.56 1.03 5.65 2.9A7 7 0 0 1 12 19Z"/></svg>
+          باز کردن در بلد
+        </a>
+      </div>
+      <a class="call" href="tel:+982644269092">📞 تماس مستقیم با درمانگاه: ۰۲۶-۴۴۲۶۹۰۹۲</a>
+      <p class="note">اگر اپ نصب باشد، لینک به‌صورت خودکار در همان اپ باز می‌شود؛ در غیر اینصورت نسخه وب باز خواهد شد.</p>
+    </section>
+    <footer>
+      © درمانگاه شبانه‌روزی پارسیان البرز – شهر جدید هشتگرد
+    </footer>
+  </main>
+</body>
+</html>
